# Meal_Sentry

./: .gitattributes  .gitignore  ANDROID_PORT.md  README.md  SECURITY.md  config.yaml.example  pyproject.toml  requirements.txt
coaches/: chad_coach.yaml
data/: facts_gr.json  foods.json  meals.json  notifs.json  rewards.json
db/: schema.sql
deploy/: install.sh  mealsentry-api.service  mealsentry.service
mealsentry/: __init__.py  api.py  bot.py  charts.py  config.py  db.py  paths.py  scheduler.py  service.py  token.py  tone.py  util.py
mealsentry/engine/: __init__.py  classes.py  facts.py  foods.py  game.py  gym.py  inventory.py  math.py  meals.py  nag.py  notifs.py  rewards.py  sleep.py  wheel.py
mealsentry/web/: dashboard.html  settings.html
tests/: conftest.py  test_classes.py  test_coach.py  test_dashboard.py  test_facts.py  test_foods.py  test_game.py  test_granular.py  test_inventory.py  test_math.py  test_meals.py  test_nag.py  test_notifs.py  test_rewards.py  test_scheduler.py  test_service.py  test_settings.py  test_sleep.py  test_util.py  test_wheel.py
tone/: templates_gr.yaml
