[project]
name = "mealsentry"
version = "0.1.0"
description = "MealSentry — aggressive single-user nutrition/gym/sleep enforcement Telegram bot. Coach #1: Chad Coach."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "wannabexaker" }]
license = { text = "MIT" }
dependencies = [
    "python-telegram-bot>=21.0",
    "APScheduler>=3.10",
    "aiosqlite>=0.20",
    "matplotlib>=3.8",
    "PyYAML>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[project.scripts]
mealsentry-bot = "mealsentry.bot:main"
mealsentry-api = "mealsentry.api:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mealsentry", "mealsentry.engine"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
